--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,8 +2,8 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "C/C++: gdb.exe 生成活动文件",
-            "command": "C:\\Program Files\\mingw64\\bin\\gdb.exe",
+            "label": "C/C++: g++.exe 生成活动文件",
+            "command": "C:\\Program Files\\Posix\\mingw64\\bin\\g++.exe",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
@@ -12,7 +12,8 @@
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
             "options": {
-                "cwd": "${fileDirname}"
+                // "cwd": "${fileDirname}"
+                "cwd": "C:\\Program Files\\Posix\\mingw64\\bin"
             },
             "problemMatcher": [
                 "$gcc"
@@ -20,29 +21,29 @@
             "group": "build",
             "detail": "调试器生成的任务。"
         },
-        {
-            "type": "cppbuild",
-            "label": "C/C++: g++.exe 生成活动文件",
-            "command": "C:\\Program Files\\mingw64\\bin\\g++.exe",
-            "args": [
-                "-fdiagnostics-color=always",
-                "-g",
-                "${file}",
-                "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe"
-            ],
-            "options": {
-                "cwd": "${fileDirname}"
-            },
-            "problemMatcher": [
-                "$gcc"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "detail": "调试器生成的任务。"
-        }
+        // {
+        //     "type": "cppbuild",
+        //     "label": "C/C++: g++.exe 生成活动文件",
+        //     "command": "C:\\Program Files\\Posix\\mingw64\\bin\\g++.exe",
+        //     "args": [
+        //         "-fdiagnostics-color=always",
+        //         "-g",
+        //         "${file}",
+        //         "-o",
+        //         "${fileDirname}\\${fileBasenameNoExtension}.exe"
+        //     ],
+        //     "options": {
+        //         "cwd": "${fileDirname}"
+        //     },
+        //     "problemMatcher": [
+        //         "$gcc"
+        //     ],
+        //     "group": {
+        //         "kind": "build",
+        //         "isDefault": true
+        //     },
+        //     "detail": "调试器生成的任务。"
+        // }
     ],
     "version": "2.0.0"
 }
